Cleaned footer and info section, added navigation bar

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                             <p class="description">A <i>Weather Prediction System</i> that provides data analytics for all your concert needs</p>
 
                             <a class="button-cta" title="Login" href="#" onclick="javascript:showpopup()">Login</a>
-                            <a href="" title="More information"><small>More info</small></a>
+                            <a href="home.html" title="More information"><small>More info</small></a>
                         </div>
                     </div> <!-- logo -->
 
@@ -116,7 +116,17 @@ Donec eros quam, sodales sit amet pellentesque eu, molestie nec magna. </pre></c
             <footer>
                 <div class="container">
                     <div class="row">
-                        <p>48033 IoT WPW System - 2017</p>
+                      <a class="tweetbutton" href="https://twitter.com/TwitterDev">Follow @Twitter</a>
+                        &nbsp;
+                        <a href="#">About</a>
+                        &nbsp;
+                        <a href="#">Terms</a>
+                        &nbsp;
+                        <a href="#">Privacy Policy</a>
+                        &nbsp;
+                        <a href="#">Language</a>
+
+                        <p style="font-size: 13px">48033 IoT WPW System - 2017</p>
                     </div> <!-- row -->
                 </div> <!-- container -->
             </footer>
