--- a/src/home.html
+++ b/src/home.html
@@ -28,47 +28,113 @@
             <section class="hero-shot">
                 <div class="container">
                     <div class="logo-container col-1-2">
-                        <div class="logo">
-                            <h1 class="site-title">RT Weather</h1>
-                        </div>
-                        <div>
-                            <a href="#" style="color:#eff4ff">Home</a>
-                            <a href="#" style="color:#eff4ff">Main</a>
-                            <a href="#" style="color:#eff4ff">Contact</a>
-                            <a href="#" style="color:#eff4ff">About Us</a>
+                        <div style="float: left;"class="logo">
+                          <!-- Use any element to open the sidenav -->
+                          <span onclick="openNav()">
+                            <h1 class="site-title">☰ RT Weather</h1>
+                          </span>
+                            <div style="padding-left: 50px;">
+                                <a href="index.html" style="color:#eff4ff">Home</a>
+                                <a href="#" style="color:#eff4ff">Main</a>
+                                <a href="#" style="color:#eff4ff">Contact</a>
+                                <a href="#" style="color:#eff4ff">About Us</a>
+                            </div>
                         </div>
                     </div> <!-- logo -->
                 </div> <!-- .container -->
-                    <form class="search_components" action="">
-                        <input id="search" type="text" placeholder="Concert Name ...">
-                        <input id="submit" type="submit" value=&#9906>
-                    </form>
-
+                <form class="search_components" action="">
+                    <input id="search" type="text" placeholder="Concert Name ...">
+                    <input id="submit" type="submit" value=&#9906>
+                </form>
             </section> <!-- .hero-shot -->
 
             <section class="info">
+                <div id="Sidenav" class="sidenav">
+                      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                      <a href="#">Profiles</a>
+                      <a href="#">Database</a>
+                      <a href="#">Settings</a>
+                      <a href="#">Logout</a>
+                </div>
+
                 <div class="container">
                     <h2 class="headline">Your Data</h2>
                     <p style="padding:10px"> </p>
-                    <div class="row">
+                    <div>
                       <div>
-                            <a class="button-dash" href="#">Temperature<br>34 Degrees</a>
-                            <a class="button-dash" href="#">Solar Exposure<br>18.9</a>
-                            <a class="button-dash" href="#">Rain<br>12%</a>
-                            <a class="button-dash" href="#">Wind<br>70kph</a>
+                          <a class="button-dash" href="#">Temperature<br>34 Degrees</a>
+                          <a class="button-dash" href="#">Solar Exposure<br>18.9</a>
+                          <a class="button-dash" href="#">Rain<br>12%</a>
+                          <a class="button-dash" href="#">Wind<br>70kph</a>
                       </div>
                     </div> <!-- row -->
                 </div> <!-- container -->
-                <p style="padding:190px"> </p>
+                <p style="padding:20px"> </p>
+                <div id="example" class="container" style="text-align: center;">
+                    <table id="" class="display" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th>Venue</th>
+                                <th>Coordinator</th>
+                                <th>Members</th>
+                                <th>Time</th>
+                                <th>Date</th>
+                            </tr>
+                        </thead>
+                        <!-- <tfoot>
+                            <tr>
+                                <th>Venue</th>
+                                <th>Coordinator</th>
+                                <th>Members</th>
+                                <th>Time</th>
+                                <th>Date</th>
+                            </tr>
+                        </tfoot> -->
+                        <tbody>
+                            <tr>
+                                <td>Olympic Park</td>
+                                <td>Josh Hadnagy</td>
+                                <td>72</td>
+                                <td>14:00</td>
+                                <td>16-09-2017</td>
+                            </tr>
+                            <tr>
+                                <td>Holsworthy</td>
+                                <td>Tim Cape</td>
+                                <td>45</td>
+                                <td>18:00</td>
+                                <td>30-11-2017</td>
+                            </tr>
+                            <tr>
+                                <td>Milsons Point</td>
+                                <td>Teegan Smith</td>
+                                <td>88</td>
+                                <td>18:00</td>
+                                <td>01-01-2018</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </section> <!-- info -->
 
             <footer>
                 <div class="container">
                     <div class="row">
-                        <p>48033 IoT WPW System - 2017</p>
+                      <a class="tweetbutton" href="https://twitter.com/TwitterDev">Follow @Twitter</a>
+                        &nbsp;
+                        <a href="#">About</a>
+                        &nbsp;
+                        <a href="#">Terms</a>
+                        &nbsp;
+                        <a href="#">Privacy Policy</a>
+                        &nbsp;
+                        <a href="#">Language</a>
+
+                        <p style="font-size: 13px">48033 IoT WPW System - 2017</p>
                     </div> <!-- row -->
                 </div> <!-- container -->
             </footer>
+
         </main>
 
         <script src="js/vendor/modernizr-{{MODERNIZR_VERSION}}.min.js"></script>
