Home UX updated

--- a/src/home.html
+++ b/src/home.html
@@ -57,8 +57,8 @@
                       <a href="#">Logout</a>
                 </div>
 
-                <div class="container">
-                    <h2 class="headline">Your Data</h2>
+                <div id="data" class="container">
+                    <h2 class="headline">$Event_name Weather Predictions</h2>
                     <p style="padding:10px"> </p>
                     <div>
                       <div>
@@ -69,58 +69,62 @@
                       </div>
                     </div> <!-- row -->
                 </div> <!-- container -->
-                <p style="padding:20px"> </p>
-                <div id="example" class="container" style="text-align: center;">
-                    <table id="" class="display" cellspacing="0" width="100%">
-                        <thead>
-                            <tr>
-                                <th>Venue</th>
-                                <th>Coordinator</th>
-                                <th>Members</th>
-                                <th>Time</th>
-                                <th>Date</th>
-                            </tr>
-                        </thead>
-                        <!-- <tfoot>
-                            <tr>
-                                <th>Venue</th>
-                                <th>Coordinator</th>
-                                <th>Members</th>
-                                <th>Time</th>
-                                <th>Date</th>
-                            </tr>
-                        </tfoot> -->
-                        <tbody>
-                            <tr>
-                                <td>Olympic Park</td>
-                                <td>Josh Hadnagy</td>
-                                <td>72</td>
-                                <td>14:00</td>
-                                <td>16-09-2017</td>
-                            </tr>
-                            <tr>
-                                <td>Holsworthy</td>
-                                <td>Tim Cape</td>
-                                <td>45</td>
-                                <td>18:00</td>
-                                <td>30-11-2017</td>
-                            </tr>
-                            <tr>
-                                <td>Milsons Point</td>
-                                <td>Teegan Smith</td>
-                                <td>88</td>
-                                <td>18:00</td>
-                                <td>01-01-2018</td>
-                            </tr>
-                        </tbody>
-                    </table>
+              <!-- <p style="padding:10px"> </p> -->
+
+
+
+              <div class="container">
+
+
+                <div id="lower-container" class="clower">
+
+
+                <div id="lower-advice" class="container clleft">
+                  <h3>Our Advice*</h3>
+
+                  <p> ‣	Advice based on temperature </P>
+                  <p> ‣	Advice based on Solar exposure</p>
+                  <p> ‣	Advice based on Rain</p>
+                  <p> ‣	Advice based on Wind </p>
+                  <p> ‣	Advice based other sources </p>
+                  <p><i>* this advice is genrated based pre-assigned evaluations of venue sensor data and weather.com data. </i> </p>
                 </div>
+
+                <div id="lower-info" class="container clright">
+                  <center> <h3 >Event Info</h3> </center>
+                    <table class="display" style="width:100%">
+                      <tr>
+                        <th>Venue:</th>
+                        <td>Olympic Park</td>
+                      </tr>
+                      <tr>
+                        <th>Coordinator:</th>
+                        <td>Josh Hadnagy</td>
+                      </tr>
+                      <tr>
+                        <th>Expected Audience:</th>
+                        <td>72</td>
+                      </tr>
+                      <tr>
+                        <th>Date</th>
+                        <td>16-09-2017</td>
+                      </tr>
+                      <tr>
+                        <th>Time</th>
+                        <td>14:00</td>
+                      </tr>
+                    </table>
+
+                </div>
+            </div>
+          </div>
+
             </section> <!-- info -->
 
             <footer>
                 <div class="container">
                     <div class="row">
-                      <a class="tweetbutton" href="https://twitter.com/TwitterDev">Follow @Twitter</a>
+                      <a class="tweetbutton" href="#">Follow @Twitter</a>
                         &nbsp;
                         <a href="#">About</a>
                         &nbsp;
